Bug #948 fixed: styles broken in Mozilla
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@743 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/kromo/cisco_wrt54g_en/fon/commonfon.css
+++ b/src/router/kromo/cisco_wrt54g_en/fon/commonfon.css
@@ -274,6 +274,9 @@ margin:0 .362em;
 }
 #floatKiller {
 clear:both;
+width:1px;
+height:1px;
+font-size:1px;
 }
 div.center {
 text-align:center;
